// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserMenu > renders consistently (snapshot) 1`] = `
<div
  class="relative"
  data-headlessui-state=""
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="flex items-center space-x-2 rounded-md p-2 text-sm transition-colors duration-200 text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
    data-headlessui-state=""
    id="headlessui-menu-button-_r_2g_"
    type="button"
  >
    <div
      class="flex-shrink-0"
    >
      <div
        class="h-8 w-8 rounded-full bg-blue-600 flex items-center justify-center"
      >
        <span
          class="text-white text-sm font-medium"
        >
          JD
        </span>
      </div>
    </div>
    <div
      class="hidden sm:block text-left"
    >
      <p
        class="text-sm font-medium text-white truncate max-w-32"
      >
        John Doe
      </p>
      <p
        class="text-xs text-gray-300 truncate max-w-32"
      >
        john.doe@example.com
      </p>
    </div>
    <svg
      aria-hidden="true"
      class="h-4 w-4 transition-transform duration-200"
      data-slot="icon"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m19.5 8.25-7.5 7.5-7.5-7.5"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</div>
`;

exports[`UserMenu > renders consistently with avatar (snapshot) > user-menu-with-avatar 1`] = `
<div
  class="relative"
  data-headlessui-state=""
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="flex items-center space-x-2 rounded-md p-2 text-sm transition-colors duration-200 text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
    data-headlessui-state=""
    id="headlessui-menu-button-_r_2j_"
    type="button"
  >
    <div
      class="flex-shrink-0"
    >
      <img
        alt="John Doe avatar"
        class="h-8 w-8 rounded-full object-cover"
        src="https://example.com/avatar.jpg"
      />
    </div>
    <div
      class="hidden sm:block text-left"
    >
      <p
        class="text-sm font-medium text-white truncate max-w-32"
      >
        John Doe
      </p>
      <p
        class="text-xs text-gray-300 truncate max-w-32"
      >
        john.doe@example.com
      </p>
    </div>
    <svg
      aria-hidden="true"
      class="h-4 w-4 transition-transform duration-200"
      data-slot="icon"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m19.5 8.25-7.5 7.5-7.5-7.5"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</div>
`;
